# Deepity

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Roadmap.md  perf.data  perf.data.old  pyrightconfig.json  release.sh  results.json  results.txt  results_LLVM.txt  run.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
bindings/: pybinding.cpp
docs/html/: Activations_8h.html  Activations_8h.js  Activations_8h_source.html  DiscriminativePCLayer_8h.html  DiscriminativePCLayer_8h.js  DiscriminativePCLayer_8h_source.html  DiscriminativePCNetwork_8h_source.html  Layer_8h.html  Layer_8h.js  Layer_8h_source.html  MemoryArena_8h_source.html  Optimize_8h.html  Optimize_8h_source.html  PCLayer_8h.html  PCLayer_8h.js  PCLayer_8h_source.html  PCNetwork_8h_source.html  RBLayer_8h.html  RBLayer_8h.js  RBLayer_8h_source.html  Timer_8h_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  base__state_8h_source.html  classDeep_1_1DiscriminativePCLayer-members.html  classDeep_1_1DiscriminativePCLayer.html  classDeep_1_1DiscriminativePCLayer.js  classDeep_1_1DiscriminativePCNetwork-members.html  classDeep_1_1DiscriminativePCNetwork.html  classDeep_1_1DiscriminativePCNetwork.js  classDeep_1_1Layer-members.html  classDeep_1_1Layer.html  classDeep_1_1Layer.js  classDeep_1_1MemoryArena-members.html  classDeep_1_1MemoryArena.html  classDeep_1_1MemoryArena.js  classDeep_1_1PCLayer-members.html  classDeep_1_1PCLayer.html  (+53 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+29 more)
docs/latex/: Activations_8h.tex  Activations_8h_source.tex  DiscriminativePCLayer_8h.tex  DiscriminativePCLayer_8h_source.tex  DiscriminativePCNetwork_8h_source.tex  Layer_8h.tex  Layer_8h_source.tex  MemoryArena_8h_source.tex  Optimize_8h.tex  Optimize_8h_source.tex  PCLayer_8h.tex  PCLayer_8h_source.tex  PCNetwork_8h_source.tex  RBLayer_8h.tex  RBLayer_8h_source.tex  Timer_8h_source.tex  annotated.tex  base__state_8h_source.tex  classDeep_1_1DiscriminativePCLayer.eps  classDeep_1_1DiscriminativePCLayer.tex  classDeep_1_1DiscriminativePCNetwork.tex  classDeep_1_1Layer.eps  classDeep_1_1Layer.tex  classDeep_1_1MemoryArena.tex  classDeep_1_1PCLayer.eps  classDeep_1_1PCLayer.tex  classDeep_1_1PCNetwork.tex  classDeep_1_1RBLayer.eps  classDeep_1_1RBLayer.tex  classTimer.tex  classopenrand_1_1BaseRNG.tex  classopenrand_1_1Philox.eps  classopenrand_1_1Philox.tex  classopenrand_1_1Squares.eps  classopenrand_1_1Squares.tex  classopenrand_1_1Threefry.eps  classopenrand_1_1Threefry.tex  classopenrand_1_1Tyche.eps  classopenrand_1_1Tyche.tex  files.tex  (+15 more)
includes/: Activations.h  DiscriminativePCLayer.h  DiscriminativePCNetwork.h  Layer.h  MemoryArena.h  Optimize.h  PCLayer.h  PCNLayer.h  PCNNetwork.h  PCNetwork.h  RBLayer.h  Timer.h
pybind/: binding.cpp
resources/: out.folded
src/: DiscriminativePCLayer.cpp  DiscriminativePCNetwork.cpp  PCLayer.cpp  PCN  PCNDiagnostics.cpp  PCNLayer.cpp  PCNNetwork.cpp  PCNetwork.cpp  RBLayer.cpp  main.cpp
tests/: tActivations.cpp  tBenchmark.cpp  tLayer.cpp  tNetwork.cpp  tReadme.cpp  tSimple.cpp
tests/python/: OpenBenchmark.py  tEquivalent.py  tLayer.py  tNetwork.py  tPaperEquations.py
